tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__CarbonSkin-AAAAAAAAAAAAAAAAAAADCw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 779,
  "prerequisites": [
    790,
    775,
    776
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can stop worrying about some mobs for now. This will help you survive a bit and will give you some of that SWAG. Your journey doesn't stop here traveller, as quantum armor awaits you!\n\n[note]PS: The nano suit also acts as hazmat gear.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Carbon Skin",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    790,
    775,
    776
  ],
  "rewards": [],
  "tasks": []
}
