tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__DarkSteelArmorAd-AAAAAAAAAAAAAAAAAAAD5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 997,
  "prerequisites": [
    991
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your Dark Steel armor can be upgraded in various ways by combining it with various other items. You will need an anvil and a lot of XP.\n\nMake sure when making the potions to only do three at a time, so the NBT data matches.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dark Steel Armor Advanced Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    991
  ],
  "rewards": [],
  "tasks": []
}
